--- a/service5.html
+++ b/service5.html
@@ -73,7 +73,7 @@
 
      <!-- Navbar Start -->
      <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+        <a href="index.php" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <h1 class="m-0 text-primary"><i class="far fa-hospital me-3"></i>HarmonyCare</h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -81,21 +81,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
+                <a href="index.php" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link active">Service</a>
+                <a href="service.php" class="nav-item nav-link active">Service</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Health</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="feature.html" class="dropdown-item">Chronic Conditions</a>
-                        <a href="appointment.html" class="dropdown-item">Symptoms</a>
-                        <a href="404.html" class="dropdown-item">Procedures & Treatments</a>
+                        <a href="chronic.html" class="dropdown-item">Chronic Conditions</a>
+                        <a href="symptoms.html" class="dropdown-item">Symptoms</a>
+                        <a href="procedures.html" class="dropdown-item">Procedures & Treatments</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Booking</a> 
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="viewbooking.html" class="dropdown-item">View Service Booking</a>
+                        <a href="viewbooking.php" class="dropdown-item">View Service Booking</a>
                 </div>
                 </div>
                 <div class="nav-item dropdown">
@@ -107,7 +107,7 @@
                 </div>
                 </div>
             </div>
-            <a href="loginnsignup.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Appointment<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="appointment.php" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Appointment<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -136,23 +136,23 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="d-flex flex-column">
-                        <img class="img-fluid rounded w-75 align-self-end" src="img/elderlycare1.jpg" alt="">
-                        <img class="img-fluid rounded w-50 bg-white pt-3 pe-3" src="img/elderlycare2.jpg" alt="" style="margin-top: -25%;">
+                        <img class="img-fluid rounded w-75 align-self-end" src="img/physiotherapy1.jpg" alt="">
+                        <img class="img-fluid rounded w-50 bg-white pt-3 pe-3" src="img/physiotherapy2.jpg" alt="" style="margin-top: -25%;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Services</p>
-                    <h1 class="mb-4">Why we need elder care services</h1>
-                    <p>Insomnia and poor quality sleep are common among the elderly in Malaysia. This may be caused by various health conditions such as heart rhythm, sleep apnea or depression. As a result, many seniors tend to wake up frequently through the night and caregivers end up having to be on alert 24/7 to attend to the needs of their loved one round-the-clock.</p>
-                    <p>Seniors also tend to have multiple chronic conditions and family caregivers may not be well-equipped with the skills and knowledge to provide the best care, which further adds to the stress of both the caregiver and the elderly.</p>
-                    <p>This compromises the quality of care the senior receives and can be exhausting for the family caregiver, who often take on many roles, as a personal care assistant, nurse, therapist, treasurer and family member all at once, 24/7.</p>
-                    <h1 class="mb-4">What is elderly care?</h1>
-                    <p><i class="far fa-check-circle text-primary me-3"></i>Personal Care</p>
-                    <p>Assist with the activities of daily living (ADLs) such as eating, bathing, getting dressed, toileting, transferring, and continence.</p>
-                    <p><i class="far fa-check-circle text-primary me-3"></i>Nursing Care</p>
-                    <p>Monitor and administer nursing procedures from tube feed and suctioning to injections and wound care.</p>
-                    <p><i class="far fa-check-circle text-primary me-3"></i>Respite Care</p>
-                    <p>Take a break to rest and recharge while our Care Pros take on the caregiving duties.</p>
+                    <h1 class="mb-4">Why Many Skip Physiotherapy Sessions</h1>
+                    <p>Often, physiotherapy does not cross our minds until a medical professional refers us to one after an injury. However, physiotherapy is not only for those injured. From a neck sprain while sleeping to chronic pain and conditions such as cerebral palsy and Parkinson’s, physiotherapy can help children, adults and seniors maintain and regain mobility and strength, alleviate pain, and improve their quality of life.</p>
+                    <p>While many Malaysians know the benefits of physiotherapy, many of us delay, skip or are tempted to skip these sessions. This may be due to cost or discomfort during and after performing the exercises.</p>
+                    <p>In most cases, several sessions of physiotherapy will be required for a full recovery or visible results. This can be discouraging for those expecting a quick recovery. We may also find the frequent travelling to and fro time-consuming, costly and troublesome especially for those already facing mobility issues.</p>
+                    <h1 class="mb-4">What Can Physiotherapy Help With?</h1>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Injury</p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Chronic Pain</p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Arthritis</p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Cerebral Palsy</p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Parkinson’s</p>
+                    <p><i class="far fa-check-circle text-primary me-3"></i>Stroke</p>
 
                    
                 </div>
@@ -168,16 +168,15 @@
             <div class="row g-0 mx-lg-0">
                 <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="p-lg-5 ps-lg-0">
-                        <h1 class="text-white mb-4">How we can better care for our elderly loved ones</h1>
-                        <p class="text-white mb-4 pb-2">One tip in caring for seniors is to remember that providing care goes beyond the physical, practical aspect. Keeping seniors meaningfully engaged is also important for their mental and cognitive well-being and keeps dementia at bay. While this may sound like additional work and effort, it can actually enhance your caregiving experience, help you build a deeper and closer relationship with your loved one, and keep you going in the long-run.</p>
-                        <p class="text-white mb-4 pb-2">Even so, caregiving can still be a physically and emotionally demanding journey. In trying times, do not hesitate to reach out for help. From professional caregivers to support groups, there are many forms of support out there for caregivers in Malaysia. You are not alone.</p>
-                        <p class="text-white mb-4 pb-2">However, the results of therapy are often only visible after many sessions.</p>
-                        <p class="text-white mb-4 pb-2">Joining a caregiver support group lets you connect with fellow family caregivers and support one another while sharing practical tips on taking care of a senior loved one. Having a professional with experience in caring for the elderly can also ensure that your senior loved ones gets the care they deserve and help to guide you along your caregiving journey.</p>
+                        <h1 class="text-white mb-4">Recover with Physiotherapy in the Comfort of Home</h1>
+                        <p class="text-white mb-4 pb-2">Many Malaysians who need physiotherapy don’t realise that physiotherapy can be done at home.</p>
+                        <p class="text-white mb-4 pb-2">By having qualified physiotherapists conduct the session one-to-one in the comfort of your home, you can feel more at ease, receive personalised care and recover better, without having to travel or wait at hospitals or clinics. This can be a more convenient and safer alternative, especially for those who face obstacles getting to therapy facilities or have limited mobility. Skipping the commute means that you can save cost on transport as well.</p>
+                        <p class="text-white mb-4 pb-2">With the option of home therapy, more will be able and encouraged to continue physiotherapy sessions and prevent potential health complications from developing.</p>
                       </div>
                 </div>
                 <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/elderlycare3.jpg" style="object-fit: cover;" alt="">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/physiotherapy3.jpg" style="object-fit: cover;" alt="">
                     </div>
                 </div>
             </div>
@@ -192,17 +191,17 @@
           <div class="row">
               <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
                   <div class="position-relative h-100">
-                      <img class="position-absolute img-fluid w-100 h-100" src="img/elderlycare4.jpg" style="object-fit: cover;" alt="Homecare Image">
+                      <img class="position-absolute img-fluid w-100 h-100" src="img/physiotherapy4.jpg" style="object-fit: cover;" alt="Homecare Image">
                   </div>
               </div>
               <div class="col-lg-6">
                   <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                      <h1>Get the Elderly Care Now !!!</h1>
-                      <p><i class="far fa-check-circle text-primary me-3"></i>Promoting Health and Well-being</p>
-                      <p><i class="far fa-check-circle text-primary me-3"></i>Supporting Family Caregiver</p>
-                      <p><i class="far fa-check-circle text-primary me-3"></i>Improving Quality of Life</p>
-                      <p><i><strong>"Elderly care services offer peace of mind for family members, knowing that their loved ones are receiving round-the-clock supervision, companionship, and assistance with daily activities."</strong></i></p>
-                      <a class="btn" href="loginnsignup.html"><i class="fa fa-plus text-primary me-3"></i>Get Elderly Care Now</a>
+                      <h1>Get the Physiotherapy Now !!!</h1>
+                      <p><i class="far fa-check-circle text-primary me-3"></i>Promoting Recovery from Injury or Surgery</p>
+                      <p><i class="far fa-check-circle text-primary me-3"></i>Improving Mobility and Function</p>
+                      <p><i class="far fa-check-circle text-primary me-3"></i>Preventing Injuries and Falls</p>
+                      <p><i><strong>"By investing in physiotherapy services, you're investing in your future mobility and independence, ensuring that you can continue to enjoy an active and fulfilling lifestyle."</strong></i></p>
+                      <a class="btn" href="appointment.php"><i class="fa fa-plus text-primary me-3"></i>Get Physiotherapy Now</a>
                     </div>
               </div>
           </div>
@@ -239,7 +238,7 @@
                     <h5 class="text-light mb-4">Quick Links</h5>
                     <a class="btn btn-link" href="about.html">About Us</a>
                     <a class="btn btn-link" href="feature.html">Health</a>
-                    <a class="btn btn-link" href="service.html">Our Services</a>
+                    <a class="btn btn-link" href="service.php">Our Services</a>
                     <a class="btn btn-link" href="testimonial.html">Testimonial</a>
                     <a class="btn btn-link" href="team.html">Meet Our Team</a>
                 </div>
@@ -247,7 +246,7 @@
                     <h5 class="text-light mb-4">Newsletter</h5>
                     <p>Get the latest information about HarmonyCare. Click the Sign Up now! </p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <a href="loginnsignup.html"><button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button></a>
+                        <a href="signup.php"><button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button></a>
                     </div>
                     
                 </div>
