--- a/service3.html
+++ b/service3.html
@@ -64,8 +64,11 @@
                     <small>+085-654219</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class=" bg-lightblue text-primary me-1" href="loginnsignup.html"><i class="fas fa-user-plus me-1"></i></i>Login/Register
-            </div>
+                    <a class=" bg-lightblue text-primary me-1" href="login.php"><i class="fas fa-user me-1"></i></i>Login
+                
+                <div class="h-100 d-inline-flex align-items-center">
+                    <a class=" bg-lightblue text-primary me-1" href="signup.php"><i class="fas fa-user-plus me-1"></i></i>Register
+                </div>
         </div>
     </div>
     <!-- Topbar End -->
@@ -81,7 +84,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
+                <a href="index.php" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.php" class="nav-item nav-link active">Service</a>
                 <div class="nav-item dropdown">
@@ -95,7 +98,7 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Booking</a> 
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="viewbooking.html" class="dropdown-item">View Service Booking</a>
+                        <a href="viewbooking.php" class="dropdown-item">View Service Booking</a>
                 </div>
                 </div>
                 <div class="nav-item dropdown">
