--- a/service6.html
+++ b/service6.html
@@ -73,7 +73,7 @@
 
      <!-- Navbar Start -->
      <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+        <a href="index.php" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <h1 class="m-0 text-primary"><i class="far fa-hospital me-3"></i>HarmonyCare</h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -81,21 +81,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
+                <a href="index.php" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link active">Service</a>
+                <a href="service.php" class="nav-item nav-link active">Service</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Health</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="feature.html" class="dropdown-item">Chronic Conditions</a>
-                        <a href="appointment.html" class="dropdown-item">Symptoms</a>
-                        <a href="404.html" class="dropdown-item">Procedures & Treatments</a>
+                        <a href="chronic.html" class="dropdown-item">Chronic Conditions</a>
+                        <a href="symptoms.html" class="dropdown-item">Symptoms</a>
+                        <a href="procedures.html" class="dropdown-item">Procedures & Treatments</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Booking</a> 
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="viewbooking.html" class="dropdown-item">View Service Booking</a>
+                        <a href="viewbooking.php" class="dropdown-item">View Service Booking</a>
                 </div>
                 </div>
                 <div class="nav-item dropdown">
@@ -107,7 +107,7 @@
                 </div>
                 </div>
             </div>
-            <a href="loginnsignup.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Appointment<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="appointment.php" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Appointment<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -209,7 +209,7 @@
                       <p><i class="far fa-check-circle text-primary me-3"></i>Maintaining Caregiver Health</p>
                       <p><i class="far fa-check-circle text-primary me-3"></i>Enhancing Quality of Life for Loved Ones</p>
                       <p><i><strong>""Ensure the highest level of care for your loved one while taking essential time for yourself with respite care services tailored to meet your family's unique needs."</strong></i></p>
-                      <a class="btn" href="loginnsignup.html"><i class="fa fa-plus text-primary me-3"></i>Get Respite Care Now</a>
+                      <a class="btn" href="appointment.php"><i class="fa fa-plus text-primary me-3"></i>Get Respite Care Now</a>
                     </div>
               </div>
           </div>
@@ -254,7 +254,7 @@
                     <h5 class="text-light mb-4">Newsletter</h5>
                     <p>Get the latest information about HarmonyCare. Click the Sign Up now! </p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <a href="loginnsignup.html"><button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button></a>
+                        <a href="signup.php"><button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button></a>
                     </div>
                     
                 </div>
