--- a/feature.html
+++ b/feature.html
@@ -97,7 +97,7 @@
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Booking</a> 
                 <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                    <a href="viewbooking.html" class="dropdown-item">View Service Booking</a>
+                    <a href="viewbooking.php" class="dropdown-item">View Service Booking</a>
             </div>
             </div>
             <div class="nav-item dropdown">
