--- a/chronic.html
+++ b/chronic.html
@@ -83,7 +83,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
+                <a href="index.php" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.php" class="nav-item nav-link">Service</a>
                 <div class="nav-item dropdown">
@@ -97,7 +97,7 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Booking</a> 
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="viewbooking.html" class="dropdown-item">View Service Booking</a>
+                        <a href="viewbooking.php" class="dropdown-item">View Service Booking</a>
                 </div>
                 </div>
                 <div class="nav-item dropdown">
@@ -273,7 +273,7 @@
                     <a class="btn btn-link" href="service2.html">Home Nursing</a>
                     <a class="btn btn-link" href="service5.html">Physiotherapy</a>
                     <a class="btn btn-link" href="service3.html">Home therapy</a>
-                    <a class="btn btn-link" href="">Respite Care</a>
+                    <a class="btn btn-link" href="service6.html">Respite Care</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
