--- a/team.html
+++ b/team.html
@@ -64,8 +64,11 @@
                     <small>+085-654219</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a class=" bg-lightblue text-primary me-1" href="loginnsignup.html"><i class="fas fa-user-plus me-1"></i></i>Login/Register
-            </div>
+                    <a class=" bg-lightblue text-primary me-1" href="login.php"><i class="fas fa-user me-1"></i></i>Login
+                
+                <div class="h-100 d-inline-flex align-items-center">
+                    <a class=" bg-lightblue text-primary me-1" href="signup.php"><i class="fas fa-user-plus me-1"></i></i>Register
+                </div>
         </div>
     </div>
     <!-- Topbar End -->
@@ -73,7 +76,7 @@
 
    <!-- Navbar Start -->
    <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
-    <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+    <a href="index.php" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
         <h1 class="m-0 text-primary"><i class="far fa-hospital me-3"></i>HarmonyCare</h1>
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -81,21 +84,21 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="index.html" class="nav-item nav-link">Home</a>
+            <a href="index.php" class="nav-item nav-link">Home</a>
             <a href="about.html" class="nav-item nav-link">About</a>
-            <a href="service.html" class="nav-item nav-link">Service</a>
+            <a href="service.php" class="nav-item nav-link">Service</a>
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Health</a>
                 <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                    <a href="feature.html" class="dropdown-item">Chronic Conditions</a>
-                    <a href="appointment.html" class="dropdown-item">Symptoms</a>
-                    <a href="404.html" class="dropdown-item">Procedures & Treatments</a>
+                    <a href="chronic.html" class="dropdown-item">Chronic Conditions</a>
+                    <a href="symptoms.html" class="dropdown-item">Symptoms</a>
+                    <a href="procedures.html" class="dropdown-item">Procedures & Treatments</a>
                 </div>
             </div>
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Booking</a> 
                 <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                    <a href="viewbooking.html" class="dropdown-item">View Service Booking</a>
+                    <a href="viewbooking.php" class="dropdown-item">View Service Booking</a>
             </div>
             </div>
             <div class="nav-item dropdown">
@@ -107,7 +110,7 @@
             </div>
             </div>
         </div>
-        <a href="loginnsignup.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Appointment<i class="fa fa-arrow-right ms-3"></i></a>
+        <a href="appointment.php" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Appointment<i class="fa fa-arrow-right ms-3"></i></a>
     </div>
 </nav>
 <!-- Navbar End -->
@@ -289,17 +292,17 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Services</h5>
-                    <a class="btn btn-link" href="">Home Care</a>
-                    <a class="btn btn-link" href="">Home Nursing</a>
-                    <a class="btn btn-link" href="">Physiotherapy</a>
-                    <a class="btn btn-link" href="">Home therapy</a>
-                    <a class="btn btn-link" href="">Respite Care</a>
+                    <a class="btn btn-link" href="service1.html">Home Care</a>
+                    <a class="btn btn-link" href="service2.html">Home Nursing</a>
+                    <a class="btn btn-link" href="service5.html">Physiotherapy</a>
+                    <a class="btn btn-link" href="service3.html">Home therapy</a>
+                    <a class="btn btn-link" href="service6.html">Respite Care</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Quick Links</h5>
                     <a class="btn btn-link" href="about.html">About Us</a>
-                    <a class="btn btn-link" href="">Health</a>
-                    <a class="btn btn-link" href="service.html">Our Services</a>
+                    <a class="btn btn-link" href="feature.html">Health</a>
+                    <a class="btn btn-link" href="service.php">Our Services</a>
                     <a class="btn btn-link" href="testimonial.html">Testimonial</a>
                     <a class="btn btn-link" href="team.html">Meet Our Team</a>
                 </div>
@@ -307,7 +310,7 @@
                     <h5 class="text-light mb-4">Newsletter</h5>
                     <p>Get the latest information about HarmonyCare. Click the Sign Up now! </p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <a href="loginnsignup.html"><button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button></a>
+                        <a href="signup.php"><button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button></a>
                     </div>
                     
                 </div>
