--- a/chronic.html
+++ b/chronic.html
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <p class="d-inline-block border rounded-pill py-1 px-4">Services</p>
+                    <p class="d-inline-block border rounded-pill py-1 px-4">Chronic Conditions</p>
                     <h1 class="mb-4">What is Dementia?</h1>
                     <p>As we age, we may find our memory deteriorating. This is known as age-associated memory impairment and is considered part of the normal ageing process.</p>
                     <p>Unlike what most people think, dementia is not a disease, but a syndrome in which there is a deterioration in cognitive functions, including memory, thinking, orientation, comprehension, calculation, learning capacity, language, judgement and the ability to perform everyday tasks.</p>
